--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
-
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
+  "useTabs": false,
+  "tabWidth": 2,
+  "printWidth": 100,
   "singleQuote": true,
-  "printWidth": 100
+  "semi": true,
+  "trailingComma": "none"
 }
