--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,7 @@
   "printWidth": 100,
   "singleQuote": true,
   "semi": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "vueIndentScriptAndStyle": false
 }
