--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "normalize.css": "^8.0.1",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
