--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "element-plus": "^2.9.4",
     "normalize.css": "^8.0.1",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
