--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,10 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
-    "eslint.config.*"
+    "eslint.config.*",
+    "env.d.ts",
+    "auto-imports.d.ts",
+    "components.d.ts"
   ],
   "compilerOptions": {
     "noEmit": true,
@@ -15,5 +18,6 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"] //node环境下进行
-  }
+  },
+  "composite": true
 }
