--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jiti": "^2.4.2",
     "less": "^4.2.2",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.1",
+    "postcss-nested": "^7.0.2",
     "prettier": "^3.4.2",
     "typescript": "~5.7.3",
     "unplugin-auto-import": "^19.0.0",
