头像的显示与上传

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,22 @@ coverage
 /server/bin
 /bin
 /test
+/server/*.exe
+/server/*.ilk
+/server/*.pdb
+/server/*.log
+/server/*.config
+/server/*.suo
+/server/*.user
+/server/*.ncb
+/server/*.sdf
+/server/*.opensdf
+/server/*.dbmdl
+/server/*.dbproj
+/server/*.sln
+/server/*.vssscc
+/server/*.sln.docstates
+/server/*.suo
+/server/*.nupkg
+/server/*.cache
+/server/*.dll
