--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "element-plus": "^2.9.4",
     "normalize.css": "^8.0.1",
@@ -28,21 +29,25 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "consola": "^3.4.0",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
     "less": "^4.2.2",
     "npm-run-all2": "^7.0.2",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.3",
     "postcss-nested": "^7.0.2",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.3",
     "unplugin-auto-import": "^19.0.0",
     "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.11",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-vue-devtools": "^7.7.1",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.0",
+    "vue-waterfall-plugin-next": "^2.6.5"
   }
 }
