--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.9.4",
     "normalize.css": "^8.0.1",
     "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
