--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "element-plus": "^2.9.4",
     "normalize.css": "^8.0.1",
+    "opencv-ts": "^1.3.6",
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
