--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "element-plus": "^2.9.4",
+    "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
     "opencv-ts": "^1.3.6",
     "pinia": "^2.3.1",
